fixed word-wrap on search results

--- a/src/components/search-results/search-results.css
+++ b/src/components/search-results/search-results.css
@@ -64,6 +64,10 @@ input[type="search"] {
   word-wrap: break-word;
 }
 
+.genre {
+	word-wrap: break-word;
+}
+
 .search-item-text {
 	display: block;
 	width: 40%;
